@@ -1,1 +1,1 @@
-11.12.0-rc1
+11.12.0
