@@ -1,180 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-11.12.0-rc1</title></head>
-<body>
-<h1 align="center"><a name="top">Release Summary</a></h1>
-<h3 align="center">asterisk-11.12.0-rc1</h3>
-<h3 align="center">Date: 2014-08-11</h3>
-<h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
-<hr/>
-<h2 align="center">Table of Contents</h2>
-<ol>
-   <li><a href="#summary">Summary</a></li>
-   <li><a href="#contributors">Contributors</a></li>
-   <li><a href="#issues">Closed Issues</a></li>
-   <li><a href="#commits">Other Changes</a></li>
-   <li><a href="#diffstat">Diffstat</a></li>
-</ol>
-<hr/>
-<a name="summary"><h2 align="center">Summary</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This release includes only bug fixes.  The changes included were made only to address problems that have been identified in this release series.  Users should be able to safely upgrade to this version if this release series is already in use.  Users considering upgrading from a previous release series are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p>
-<p>The data in this summary reflects changes that have been made since the previous release, asterisk-11.11.0.</p>
-<hr/>
-<a name="contributors"><h2 align="center">Contributors</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release.  For coders, the number is how many of their patches (of any size) were committed into this release.  For testers, the number is the number of times their name was listed as assisting with testing a patch.  Finally, for reporters, the number is the number of issues that they reported that were closed by commits that went into this release.</p>
-<table width="100%" border="0">
-<tr>
-<td width="33%"><h3>Coders</h3></td>
-<td width="33%"><h3>Testers</h3></td>
-<td width="33%"><h3>Reporters</h3></td>
-</tr>
-<tr valign="top">
-<td>
-3 coreyfarrell<br/>
-3 rmudgett<br/>
-2 mjordan<br/>
-2 sgriepentrog<br/>
-2 wdoekes<br/>
-1 Elazar Broad<br/>
-1 gtjoseph<br/>
-1 jrose<br/>
-1 kmoore<br/>
-1 newtonr<br/>
-1 qwell<br/>
-</td>
-<td>
-1 Arnd Schmitter<br/>
-1 George Joseph<br/>
-1 JoshE<br/>
-1 Rusty Newton<br/>
-</td>
-<td>
-2 mjordan<br/>
-1 arnd<br/>
-1 coreyfarrell<br/>
-1 dennis.guse<br/>
-1 igorg<br/>
-1 rnewton<br/>
-1 stephane.chazelas<br/>
-</td>
-</tr>
-</table>
-<hr/>
-<a name="issues"><h2 align="center">Closed Issues</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p>
-<h3>Category: Addons/chan_ooh323</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-23814">ASTERISK-23814</a>: No call started after peer dialed<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419375">419375</a><br/>
-Reporter: igorg<br/>
-Coders: qwell<br/>
-<br/>
-<h3>Category: Channels/chan_sip/Subscriptions</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-24087">ASTERISK-24087</a>: [patch]chan_sip: sip_subscribe_mwi_destroy should not call sip_destroy<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419441">419441</a><br/>
-Reporter: coreyfarrell<br/>
-Coders: coreyfarrell<br/>
-<br/>
-<h3>Category: Channels/chan_sip/TCP-TLS</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-18345">ASTERISK-18345</a>: [patch] sips connection dropped by asterisk with a large INVITE<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=420435">420435</a><br/>
-Reporter: stephane.chazelas<br/>
-Coders: Elazar Broad<br/>
-<br/>
-<h3>Category: Core/ManagerInterface</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-21178">ASTERISK-21178</a>: Improve documentation for manager command Getvar, Setvar<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419943">419943</a><br/>
-Reporter: rnewton<br/>
-Testers: Rusty Newton<br/>
-Coders: newtonr<br/>
-<br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-23985">ASTERISK-23985</a>: PresenceState Action response does not contain ActionID; duplicates Message Header<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418713">418713</a><br/>
-Reporter: mjordan<br/>
-Coders: mjordan<br/>
-<br/>
-<h3>Category: Documentation</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-21178">ASTERISK-21178</a>: Improve documentation for manager command Getvar, Setvar<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419943">419943</a><br/>
-Reporter: rnewton<br/>
-Testers: Rusty Newton<br/>
-Coders: newtonr<br/>
-<br/>
-<h3>Category: Functions/func_uri</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-23911">ASTERISK-23911</a>: URIENCODE/URIDECODE: WARNING about passing an empty string is a bit over zealous<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418649">418649</a><br/>
-Reporter: mjordan<br/>
-Coders: jrose<br/>
-<br/>
-<h3>Category: PBX/pbx_lua</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-23818">ASTERISK-23818</a>: PBX_Lua: after asterisk startup module is loaded, but dialplan not available<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=420147">420147</a><br/>
-Reporter: dennis.guse<br/>
-Testers: George Joseph<br/>
-Coders: gtjoseph<br/>
-<br/>
-<h3>Category: Utilities/General</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-23508">ASTERISK-23508</a>: Memory Corruption in __ast_string_field_ptr_build_va<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=420715">420715</a><br/>
-Reporter: arnd<br/>
-Testers: Arnd Schmitter, JoshE<br/>
-Coders: wdoekes<br/>
-<br/>
-<hr/>
-<a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all changes that went into this release that did not directly close an issue from the issue tracker.  The commits may have been marked as being related to an issue.  If that is the case, the issue numbers are listed here, as well.</p>
-<table width="100%" border="1">
-<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418262">418262</a></td><td>rmudgett</td><td>chan_dahdi/sig_pri: Fix type mismatch in the idledial feature's channel creation.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418323">418323</a></td><td>mjordan</td><td>include/asterisk/xmpp.h: Convert indentation to tabs</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418366">418366</a></td><td>sgriepentrog</td><td>config: inform config hook of change when writing file</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418465">418465</a></td><td>coreyfarrell</td><td>Fix minor reference leaks in app_skel and TEST_FRAMEWORK</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=418505">418505</a></td><td>coreyfarrell</td><td>astobj2: work around REF_DEBUG race which causes out of order log entries</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419162">419162</a></td><td>kmoore</td><td>Fix more dev-mode build issues</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419284">419284</a></td><td>sgriepentrog</td><td>app_voicemail: use a consistent generator string</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=419685">419685</a></td><td>rmudgett</td><td>datastores: Audit ast_channel_datastore_remove usage.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=420054">420054</a></td><td>rmudgett</td><td>format.c: Add reason comments for the format_list ordering.</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/11?view=revision&revision=420655">420655</a></td><td>wdoekes</td><td>tcptls: Avoid compiler warning on non-dev-mode.</td>
-<td></td></tr></table>
-<hr/>
-<a name="diffstat"><h2 align="center">Diffstat Results</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p>
-<pre>
-addons/chan_ooh323.c              |   32 +++---
-addons/ooh323c/src/ooq931.c       |   12 +-
-addons/ooh323c/src/printHandler.c |    2
-apps/app_meetme.c                 |    8 -
-apps/app_queue.c                  |    2
-apps/app_skel.c                   |    1
-apps/app_speech_utils.c           |   56 +++++++----
-apps/app_voicemail.c              |    4
-channels/chan_sip.c               |  185 +++-----------------------------------
-channels/sig_pri.c                |    8 -
-contrib/scripts/refcounter.py     |   17 ++-
-funcs/func_frame_trace.c          |    1
-funcs/func_jitterbuffer.c         |    1
-funcs/func_uri.c                  |    8 -
-include/asterisk/xmpp.h           |   84 ++++++++---------
-main/astobj2.c                    |   15 +--
-main/config.c                     |    7 +
-main/features.c                   |    8 +
-main/format.c                     |   20 +++-
-main/manager.c                    |   20 ++--
-main/pbx.c                        |    5 +
-main/tcptls.c                     |    5 +
-main/utils.c                      |   18 +++
-pbx/pbx_lua.c                     |    2
-res/res_jabber.c                  |    2
-tests/test_abstract_jb.c          |   11 ++
-tests/test_aoc.c                  |    2
-tests/test_astobj2.c              |    2
-tests/test_astobj2_thrash.c       |    2
-tests/test_config.c               |   14 +-
-tests/test_event.c                |   18 +--
-tests/test_format_api.c           |    2
-tests/test_hashtab_thrash.c       |    2
-tests/test_logger.c               |   24 ++--
-tests/test_voicemail_api.c        |   12 +-
-35 files changed, 273 insertions(+), 339 deletions(-)
-</pre><br/>
-<hr/>
-</body>
-</html>
