@@ -1,3 +1,7 @@
+2014-08-19  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 11.12.0 Released.
+
 2014-08-11  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 11.12.0-rc1 Released.
